[project]
name = "devgraph-dora-molecule-demo"
version = "0.1.0"
description = "Demo DORA metrics molecule showcasing RemotePlugin with self-hosted JS components"
authors = [{name = "Arctir", email = "support@arctir.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7",
    "starlette>=0.27",
    "devgraph-integrations",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.entry-points."devgraph.molecules"]
"dorademo.molecules.devgraph.ai" = "dora_molecule.mcp:DoraMCPMolecule"

# For local development, uncomment the following:
# [tool.uv.sources]
# devgraph-integrations = { path = "../devgraph-integrations", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dora_molecule"]

[tool.ruff]
line-length = 100
target-version = "py311"
